# ChangeLog for app-backup/deja-dup
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/deja-dup/ChangeLog,v 1.31 2013/04/07 14:20:47 jlec Exp $

  07 Apr 2013; Justin Lecher <jlec@gentoo.org> deja-dup-22.1.ebuild,
  -deja-dup-24.0.ebuild, -deja-dup-25.1.1.ebuild, -deja-dup-25.3.ebuild,
  -deja-dup-25.5.ebuild:
  Drop old; make all ebuilds use vala.eclass, #463720

*deja-dup-26.0 (28 Mar 2013)

  28 Mar 2013; Justin Lecher <jlec@gentoo.org> +deja-dup-26.0.ebuild:
  Version Bump

  05 Feb 2013; Justin Lecher <jlec@gentoo.org> -deja-dup-23.2.ebuild,
  -deja-dup-23.4.ebuild, deja-dup-25.1.1.ebuild, deja-dup-25.3.ebuild,
  deja-dup-25.5.ebuild:
  Use vala.eclass

*deja-dup-25.5 (05 Feb 2013)
*deja-dup-25.3 (05 Feb 2013)

  05 Feb 2013; Justin Lecher <jlec@gentoo.org> +deja-dup-25.3.ebuild,
  +deja-dup-25.5.ebuild, metadata.xml:
  Version BUmp

*deja-dup-25.1.1 (05 Nov 2012)

  05 Nov 2012; Justin Lecher <jlec@gentoo.org> +deja-dup-25.1.1.ebuild,
  +files/deja-dup-25.1.1-desktop.patch:
  Version Bump

*deja-dup-24.0 (28 Oct 2012)

  28 Oct 2012; Justin Lecher <jlec@gentoo.org> +deja-dup-24.0.ebuild:
  Version Bump, #439850

  07 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> deja-dup-23.2.ebuild:
  Revert to ~x86 because dev-libs/libpeas is still ~x86, see
  https://bugs.gentoo.org/show_bug.cgi?id=427544#c42

  03 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> deja-dup-23.2.ebuild:
  x86 stable wrt bug #427544

*deja-dup-23.4 (30 Jul 2012)

  30 Jul 2012; Justin Lecher <jlec@gentoo.org> +deja-dup-23.4.ebuild:
  Version Bump

*deja-dup-23.2 (09 Jul 2012)

  09 Jul 2012; Justin Lecher <jlec@gentoo.org> +deja-dup-23.2.ebuild,
  +files/deja-dup-23.2-add-missing-include.patch:
  Version BUmp

  08 Jun 2012; Justin Lecher <jlec@gentoo.org> -deja-dup-22.0.ebuild:
  Cleaned old

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> deja-dup-22.1.ebuild:
  x86 stable wrt bug #418511
