@@ -5,14 +5,14 @@ AUX deja-dup-23.2-add-missing-include.patch 355 SHA256 a82cdfc1955d9cc5085088103
 AUX deja-dup-25.1.1-desktop.patch 1102 SHA256 e18e51ca2ee1584600d9a750c9ad15b207774f176caa8cc8bf1bc02f0ea2c751 SHA512 9cb0f8f8ecbb9e1f34b313addc268894adb6b7b086e9f889a5746e26da86505a0cbf5047a1517744b7d5d8dba709361f4c37e4e00ba23506151922ea47aeed7a WHIRLPOOL 7172802c776162669d6ef3f1b6a9ca306e4a33c9a0903fc116ef0f0da7e3fb8adc28bddebd3316ec61e277aac5cb3806b6ea59f68c51e537d381db83f7b6122c
 DIST deja-dup-22.1.tar.xz 777248 SHA256 44cb8fcd45799a369c8da2717792a87e3e183eeca1b07fa8f2aac8664f00ca5e SHA512 52d99c3ee66beca49a5c43bd7026b03347f8311e74c32ff2d98a1594dd0cf4b5cea8011a7e6561e54ae04b6e812149dc6c29982a15db3078cdef548b44e9cb31 WHIRLPOOL a57aebb975c9a5cc05e6f1a390cc910e328f01fae9f18d91d76b4d8cb274036d759ecd8aadee2309b23378622f439ef2b5ddc5629e5b42b1174f55d59feff9bf
 DIST deja-dup-26.0.tar.xz 820956 SHA256 5fa546ce781183d6041148583cf1c7d6590cec8c1cf0edd6d0db503fc8b8002b SHA512 cdfd681e554d4be7cdef2e000c7e4111cbc51c3274cc3e1c35a3b34bb52550494bd6b81f1dce051cd62fbd683d855f29059cce015bc69fe69c33bb69a3ef03cc WHIRLPOOL 51f52bf138c99ad1e2dd796e6944af546fd51926a8cd0c25588a0f00ed929426c633b6f3f96d037fff4c5355461219ea0221365256db3d8500338cc9e38d9b8e
-EBUILD deja-dup-22.1.ebuild 1164 SHA256 d0a7fd9e35d986bfc7c808737aaa75272752cfafbb2c8dba4fc2ab6c2e602e24 SHA512 34afe4580b1b6d47da16e597413877901120832fa260d505812d00f9f4553cb8ea5c77c8a87418c7aafc87288725b088eedb1289ad97405ff68f9064575dfc0b WHIRLPOOL 51afb0cc71c48d4eda915f092cd65a26a286e519d62d8a04de958e73198e5d14f81e79c2178cb22f9972955bebf379f7ba9584a73bbde2fc5bf66e00b400accc
+EBUILD deja-dup-22.1.ebuild 1205 SHA256 d3eda21624fd98a3ff741ce920402990a0decdf3700caa7e870223bd6ed2ca59 SHA512 cd9838b585dd6d5b366d39ab1aa19c04c2214933eefeea0a228c8a73652e4079b491f7d64fad534a60506e80602eb469546ac92ed1bb4ee833320b54f19e0f98 WHIRLPOOL 02006ef10dab5191d4c851e631e76ce16e24814d134f8d2485641b8efe4e423559b6162689ff8f4cbe73d52f006caf9cc964c0fe26f28cd40994fe255503f42c
 EBUILD deja-dup-26.0.ebuild 1166 SHA256 142de57f98352d019cd01c8d326cf7555b8a0b725cdea0aafd5f903e2db83ebd SHA512 0ec4abdb0056528f014508cd1a2e4e8459df9b3b48425f58a496393648a5af59bbdc02efc5c4ed82a3f62388143be1aa7256b73b7a4e839b52393056d40e80d5 WHIRLPOOL 5b0fd7713862044993673386797dc5951570a88387a0baaf03ca9f4129582db31982f001838ca0bbd334568b16f21abae9650a808bc535c79263448e60d94b3f
-MISC ChangeLog 5018 SHA256 0c041ea780a05b799b91a37cb9a2296fe51a5759bc1d2248bcc3d7c7f6691950 SHA512 a695a0af98f500dd8ce63c872af60071fb1ef05c2906888a84d77239e61e63022f7057f61bd5ec6f0ada92306790b38f6e03a03b0c7f9c8caa996a3f5d1e5115 WHIRLPOOL 7fdbf4e246357ade7a2536eda9a013cef16ba9819149786784d36068b539c39ffdfda55a740490df25415322f5f837f004994a079cc4fd5ad7fce0f21f26bebb
+MISC ChangeLog 5131 SHA256 8e1a1004c413988d0a34761cab888fa91dfec4465e13a67d61128290aebc4e74 SHA512 99e27ecfbd5fc927910031d4bb789574642d5f2f1b7eea1d5592c94f7182f3f349ca8b069044dafe890b6392d665285b3759f140a2faf9ae762d5c994d990d27 WHIRLPOOL 812a813b8ade0a2edff64cdf1b92ecbd352a929e82a1880645a1a737793130a9e4b73904a834a61dd67cf8cc8eade298889f312a575de9d5fdc6d9c76d38532b
 MISC metadata.xml 312 SHA256 5e85b8043d4cd301accf9fa0493e09543103dbe6412cabf21f5b33f17f7f2380 SHA512 fd9795209969bcffddc66a6226c19ccdc7101fe89f833f73f429a2cf6068a25f050f6bac91b9948484c2c881e1efbafda2da47111df4559e12fdf55a5d78d374 WHIRLPOOL e56ddb6f4b234548a28e040ef31896fc86a23bf1afa3d1308c25ed40ff7f456113169f38810072c5f7930cb468f66608cb3e5fc43b793169f2e57785029767e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlFhgPMACgkQgAnW8HDreRaWmQCgy8o9UhH6JC44opYQHw/AXG7N
-Qr0An3nufaA+IWXVybea7EIW1qqIXJlW
-=ObMs
+iEYEAREKAAYFAlFhgzwACgkQgAnW8HDreRaUTwCeJpcgzRqaoBnnhL9Sj/wq2qgZ
+negAoKE8GvvaiI7hZVEF+h4RtzXAQ/7c
+=v1yi
 -----END PGP SIGNATURE-----
