@@ -2,18 +2,20 @@
 Hash: SHA256
 
 AUX gnupg-2.0.17-gpgsm-gencert.patch 1121 SHA256 fa8369a4466b3cce54215a348940422f46f4d359f9e9b3c7029a1138870888df SHA512 ecde032b205cc16c33ff21ded55b93e74058cd804d68e4a0738ac70d54b5b388b6f709d21719a5e418c662b7ee74bc4aef7a0c59de106e2d4bd06b7bc1a11138 WHIRLPOOL 5dc4d3de29290e8e274a0f4fef871cea7f49553846254d819ca776000978a72c694212559d9ad03312f94f71f406de4641c0575188d340017a7937b01753b8a0
+AUX gnupg-2.0.19-support-sc-key-3072.patch 5734 SHA256 1002f8a3cb4128195c6b7ee00120603d4680f535b8d8c5dd9d68897ff3288bbe SHA512 f376a2d1564dd9c391e080f65dd2ba5a8e38d52fb51cf70e1c9f7feae2e3a3c2f819fe561ad51872cd3f35e1e3fad065c90282ffc7907bb6b9557f561b7ddac5 WHIRLPOOL f080725e86953dc183fdc81eb9fa503b2234a8aa60a0722282faea0c29045091f446699cb98f7f760c0d2a2ca710dda6f2d83bfe449d70e60017cd2095c43ca3
 DIST gnupg-1.4.13.tar.bz2 3685873 SHA256 72a24dd318472f0c8f0d00ebe19fb4bcf43e30845bcc92a8ae43c810df295d5a SHA512 62c330e02c311206c653cbadf21783599362601f4375ecb32a5bc8ff3f5c64160d95d28555fe06d7fb612c3802c87e0be1d0a68d61b404fdfcecf3580f14b738 WHIRLPOOL 4ae940bda2cc713a387541101df3ff06753c4f701d5d53460af7118278ce5d9b8cd83dd15ea033de5ac15ec6f4a0e339621a359497f4c178c25bbdcc38763d12
 DIST gnupg-2.0.19.tar.bz2 4187460 SHA256 efa23a8a925adb51c7d3b708c25b6d000300f5ce37de9bdec6453be7b419c622 SHA512 9bfc83ebca29ca8e3dde803ba494adb3c4e2fdcacbf33b5592764fe187dbe2433e04ff53734a9c3197358d559c1046098707089ddbea9fa63c849d48ce73ca51 WHIRLPOOL 026f9a8740322b951b256ec87fabb8a1b3ad2114208f52c2082b73b2193d1be8e276f0f526762bbebb04e612351162eb78c9c50eeb058e35fad9c4df1d7db540
 EBUILD gnupg-1.4.13-r1.ebuild 3700 SHA256 eb816d9de7480c92e31b75401eff2f8f4e4097a222fc8867c81bf1c6a05c60eb SHA512 cced000ac9af04c73dddbc83d8316cecdbb8965f6ad9b8e16066fa3e99c8a1cf7474ed3dac2a50786a15a18bf701aeaa314623f0306c463672aa9d4324741ed8 WHIRLPOOL b62ea4d99fa805564261a76f0da05b06611a1537986e8d4d812da46d2bcd3b421c1fbcdc481255e4c516d526aeffddc9697da08e2e85c52c14711357b3dafdc3
 EBUILD gnupg-1.4.13.ebuild 4239 SHA256 926ecef683acf166bfc7ba9b7b232fb8b19b3e25b9a8cbabb1dd7d5ea7562f4b SHA512 f3c26c737a346bb352df018a9c3fbc645ee40a259ace2cb4d9429124a5d9e77b2d9e45810a7f1f16920b414c2d42b3da5cd88ba1d17e4bf4222d4507d9330dcc WHIRLPOOL 2b3fecbfb80daf95771f3c23dd8d9ea71229da28417bd0b6a6491b91675999aeb0a9bbdf658fa80279b5e343d74c30bbecd8002dbe4d42b39df00691d2dbd6ef
 EBUILD gnupg-2.0.19-r1.ebuild 4582 SHA256 44cfdd22b5a2697cfc8d91cd4a6dc5ba64dcfaf506b20b0560ccb58ce61f9a78 SHA512 bbe29c08c6ec1fc27d6ed87736eb4ffdc85802a5a4a5f976e7c2a8b953bb68e056dba3e9b16531f465dbd738922aeb48313db39d4f971b46f3d1335b93945574 WHIRLPOOL cda6bf962f7fdbe6af6af618b931d388b9e91cb015471b772ad78a0948e1c822e6ad9efc17af3d6587d28e562dcb1c9b6f9e2c6b140889b6595bbacb67332045
+EBUILD gnupg-2.0.19-r2.ebuild 4637 SHA256 85fed8557e88c8457aa2f3eb3b60ca5fed7fa68465e1ac9296be5e12b341f341 SHA512 f1762fc4fac4f5ceac0ce496f61eed542eda4d83157b2ea1dc8d9a25d7afb4e6963e798156014f10ce61b5f17c03d47e87a3476f4e5f6f52575fc86e108b45e8 WHIRLPOOL 8a257aa4874d980f6123699e72c84874ccdd58b81ef2c2f2ecd3dcc829877ffc9da40194238526dcfb2b7c77e16d8c74f1b41c9f3df351c52249d5b75a8f0dfe
 EBUILD gnupg-2.0.19.ebuild 4472 SHA256 5a5159050703c2cc0831b6b6a7a42e6d1d9a92b3443e5039290fed2b7cfbc5b6 SHA512 48310f5582cf4a95cd20828a7e313bf7bca79e4edbef44ec4f95d048f1f9d7c932f469dc239827f38a3fd6a4b0c5c7624d3f338d8735525a877d623aeb5b0105 WHIRLPOOL 59a01c348c91268690cbc28706d635f511fef2faa2158446a915736652421abb123bf45c9598412b21c8d7b11b5635b55301ec5f44fedce0476eaab7d7e7fd8c
-MISC ChangeLog 68766 SHA256 bd2b97fe72ada0b7757a99896679ed19b8e7608c73788c1be0070df269530d83 SHA512 c3bb2c42cd78557e8df076d2ee4fb8250c8832f023641b921a2a49ac3b7f98633d705a19644ca5bb608f56ea2bcd9cc40eddc0561b8c79372f8cf28da9b32d8d WHIRLPOOL de5b1a190c161c8258d8ec0aa6f03dd74ddd6eb1d1efc1dbf45f5e36d7c9506e3eebebb4291979be9a7e26455d1a0d7d58b13630738e9e956481570e34b3d886
+MISC ChangeLog 69026 SHA256 e510298a99541a74c91252def4f6191dd3f82d68285e92dcacd11e534edbd3d7 SHA512 c3384263cf55c4adf29a0b8523076788a6b8a055f81239ee2bac0400d7f808a44b9a9bf95b31160a35eabc2812af5638dbf17cb907d1821bc51a9771c3fc14f2 WHIRLPOOL 6f71c07298c216cf507ca6615391c960d66b618d271b8c4d702e9c184f2c988f473c89c68e8bbf6231d0961cd4322319e53b342230ef8d5972ef15fb85b81415
 MISC metadata.xml 1078 SHA256 6d0df2861d7b3fc7777f9c703b06f789a8e4e4d08a98b1f5f5cc661943a5b7e0 SHA512 2998315ea1dad11806385d84827189efb626620d6596bf51a67180567a5ed3cbcb5eea50de907477b93d876ce66fb7e944cce159fe29450a301cda9bdd76db87 WHIRLPOOL fc0761ee1950b067a4434192c22b3d516017b539694e3615f9429ad8b05ace449e8d9abf01086baf91eb93cb9ad4fe2c37467b0313ccaf0411a99be63a7440e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEmdbgACgkQ/ejvha5XGaNWYwCg07SePmpqIMp4EsAiFLvI+tEI
-ZEwAn1XjYhlIDhMTbLuvhFcLIoSrMIJ7
-=KTQw
+iF4EAREIAAYFAlFhuIIACgkQXYk9GL8g3FGA5wD+M6tYy9017pL9CH9IRhCQmxeU
+O0MDTV2lCtUwIBgojuEBAJRGe4U8qNPDqus4Lv8nAlaeHgzCIAvNgbkqENCMMjgM
+=Wgjb
 -----END PGP SIGNATURE-----
