@@ -3,26 +3,23 @@ Hash: SHA256
 
 AUX graphicsmagick-1.3.16-libpng14.patch 2540 SHA256 1c0db66018035a13fbfa2d61d3a71534350e52809e67888f07113663b82bf4c6 SHA512 aab31f92a3b41b60e42afd8d222c16a64d1a602e66b8f61efbadddc09a95aa32d9a5a20f535c784ffd58978da7b5f9580c85ee061e49b043e9dff8fb7a015379 WHIRLPOOL ce849fe5293714ea227c9620165431df97b7a3c51a94f8259617ccbddafa6dfb5268f30416258abaff1a5cd54b27aaf01c2b57b0d816c660d2aaab16946387fc
 AUX graphicsmagick-1.3.17-freetype.patch 1152 SHA256 be7a5b150c1962f843ffeec17fb623e2a8a8a340697f9c5b627280cbe1a3a885 SHA512 771fe683c0f672d5ee559abd796b8b29a24969717c43ee859675bcbd1e8bd9a1755236cc1862b43c61a4708e27c853b2dc91db64bf6e4e276aaa669ad4180b88 WHIRLPOOL 4c150994bae88f924e739cb33522d6c22428204a49540eff28636eb59d230beac1b50fe6f826c4ba45031d176b817e8d26ce51f32ef8a6f8464957f48e7e9a4a
+AUX graphicsmagick-1.3.18-freetype.patch 1172 SHA256 8f7bd49c3ea0b694b24fa100b54d2543270cff6324ce014bb547fc09e5cbcfa1 SHA512 32b319223554b95c721602ce605d316a9c960c27ed402e298578762168de65d5ef8f344444a2855839c70754d105be961d5afd4c91bc691084a5e6208dbffda1 WHIRLPOOL d65da11b2f26a7a17b5968fa4359a340cd52d016bf6e3300466fc2042fc111f79602d24e9d00318bb5563fba431ebb98fc0cb4a99bde5142c5507d9df2b03f53
 DIST GraphicsMagick-1.3.16.tar.xz 5550004 SHA256 df8ca4d79c0071662cdf125d08581a2c55910f9c5c3e2b885dd05271559dd4b0 SHA512 24f94cbfa5e92897973a51ce5ee231733483ab04b271432999a2485a2e4355c5b3bcd8017dbfd1fcdd3e4798750caba28e8e67cf533f367ac3f5f03867f620bc WHIRLPOOL 49b33ce9ffb438bd4a1445973e8f7a7724c1d6588dd6adefbe68a7ca4ed8c500e3a44695e0bc0a2744c8cb2ee714cb5aa5f0b6d2d90da1d252c2536dc39879be
 DIST GraphicsMagick-1.3.17.tar.xz 5403300 SHA256 25a80cb86ff9ba3d11972120be3f6c70c6c12168d2ef95c6f30899db3d74cc36 SHA512 8de9f886b9dd48e0337d00dddc42d954dd851d4c1a924c0a81ac98f569c3f047f438b71a5c8ebbd9bd8effd6b12911fbeeb0bc8d7c3c562c94c8919ca01a97bf WHIRLPOOL 718718f5c788c614450a68881ffbd506b5be0478b8d166075a635e9814c920012ceef96ccb5513559d0eb0a4564cf6e9f46bf72884404f9b0c7b4bfb08ca8af3
+DIST GraphicsMagick-1.3.18.tar.xz 5124436 SHA256 fd48eebe200793e6f62a2b7d96413c94a8967ab56295605513898e2c8524b0ab SHA512 c04dbca467d2ac94d9c47818c7087954ceb54a736fdd062be6d499319037f4bbca3a779542d8acad262b59cb599521f895177574a21975f496ba57061b64b960 WHIRLPOOL d3b396d1cf3691f4aec1387066a55e4105e220cba22ef690234cb8724e955cc5dd4e39c269fddf610d61249850499facaaa54d2150660ed8f5126554a27c11dc
 EBUILD graphicsmagick-1.3.16-r1.ebuild 3169 SHA256 9771f7ae8bf48dc18ba5ccd8080ec9316e89fb499461a060709f86b8a20530c0 SHA512 b2ab63f287bcdf4f4a4b41c807658ebac68cd7c133d0009c5fd6e0864646191d1df77505c75a660cc7ccd39b2944825305957d15a696bd0ee72a9b2c5ba86994 WHIRLPOOL 6758a2a6da77060e714e1b1edc87f91bdc4844eed8ad93a5618ecea23fe162d5ba27b33814a1e4cb271033dfde25882f0129be98cd8a872e9171c5c2ba8c545d
 EBUILD graphicsmagick-1.3.17.ebuild 3116 SHA256 b9ca412e1dcbb149394c9a250e2c72dbd99f1af5f1c2973bf4641727bb904ba6 SHA512 c6e171fd0ef825e9d220beb168a5a087aa1a038787b1a12a4d1d57a597f38e617fc8d9586d957f26e445d091d7f15befdbd4c6f82b2827f451f801e7837ec0e4 WHIRLPOOL 5e6df5d1d74f1b5c692b6b5c0b8c984050f8f72b19ff5279c7f8901cf9b682902acb8fa5ff9661afb0e643121b5663b8a6ab97e4d35531dec6f6310648c186a6
-MISC ChangeLog 11927 SHA256 0d71dfd009d1baa796970798c3f9ef97f29610714d075f82a348c8f7a0c8abdb SHA512 20209524a3ac564a11f114cbe5d6700d0eee3c41d26d0618c3f6a3bfa190e010b4783f0e85dbe91a39df021085fca920d04fd22e941eb176a00bcfc66426ba75 WHIRLPOOL 021ec661cadee8a51fbcbde79be6b64cbe84ea3db1173bca32534bb2b04bc88a222007ef8e5334260df9da14939a72267f31f660b512d948cb5faa7ffd449a27
+EBUILD graphicsmagick-1.3.18.ebuild 3095 SHA256 500313b8604ea5ab37f178235526333553804318ec8539f90147baaab31acdc4 SHA512 e60363d7bda5c44036dd8cd66a5ade10f04649c9398d267eae30b7b5b7a0a4611f49bfcad62f1fd68db5a69c89228f0a7329cd26860b017c56e8d92bfefc37c9 WHIRLPOOL 48a014f55753dce0923005651aac3783eea22e09e3a73076b8572407a9a69d0e481e00e9605974b8cc038454a39abb0cd7bb9333233c267d8ecf991f22f1d39f
+MISC ChangeLog 12112 SHA256 25bff8cf53702b8b67ecfa5fbd9249788eb6dc7c195a3a49337ff0c712145b34 SHA512 9904cd1e6c0f9c086775c3916cb828fba3a9b429001f6a6dae6550d22630c8ed5f1abfb3ef2f68a9be00f3a83ed25fe41f096a19583d5c7f21504228204727b0 WHIRLPOOL e5d371fda88bd068387dd35647159d5efcfcec00348b8ed9b97558c254b4ca4aeb23caa6b5dc5a7082f90668bf9f0a6c9173fd4e71e3d5f1bb272cccbedb3dbe
 MISC metadata.xml 948 SHA256 885686871e4c7d112c5fcbbe0a9056a286c5714985643844bb3a078175085ac6 SHA512 bd1485172b469c218f688d3352c5a00f16f651a3aedbc1db786aa524b6e7c1c237cce556a17d223c29ccff870601691ae7a0f54d01005c3541a3c67526ae65ee WHIRLPOOL 7f33793cca1f96fb4d65c8d1da2ea14901ed6614ff99655bad14e71963ecd0f3fdb6c216e8df301a6e462d04e3461031f0874e58b2b94d9271f659df902285dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQ/NCEAAoJELEHsLL7fEFWO5kP+wXZC3omeEoLwLVCk4sa5DdU
-/WcbFeZCNBQpktFO2Cdz+uKRBAVMg0bV8F+RjHfzRL3mlLim7iC7gkequ4LREc3Z
-n/A5bKepcN8IcF1LWXt+fW8t4/gj36ITyiQxsQ5vstxEhvCvXmrQ9Y/BWhXLylsp
-OL2z90/+qwZIJ6uqGOD2r8ast6SmHcoZWQTXJo5zSCa9fqBPjCMu6G4gpBFxZ5jW
-V2/Q3F5GkjrRDDRr0eBkrDEyFUeukU8INRBxOHvlnvE5VVr0FHlmgBxetCCKy3PW
-0+GrTpuwugDPUZmlrTfz7YvoqtvINoI5S1GkUUXKkBBEMERVYbhsKpuiJv94kdgd
-EXaQ+e+NNK/8VUvW4Rn+A1IB3z7COvFuYZw6DxMYQO552NHy5Rw2Wv/7QLtfzkUQ
-nMp/kUtibqNA/EcuZ6jA78BjTuj1essU0JKDT3SKOn0F/5tnqPZhFn3FDUGecyyZ
-RzupTcFVjZmNlqgbkxw7OWy/gD9bY7lmnbMrcFC2PiLnFi7tMoZUx5pJ+1UpvO5t
-g6IpGncB2ii+W1ote6zXHdE1kwMk/GJgeJzZnctLQgXKby92rPFGwEiosHxHUSan
-zlwqk4fV6BYR1/nDF9d1KQYghUMQ9yzogzv4fIEOCPqcC1cFLXTe2fHgpgqI/sqz
-Ty1Lr0LF3RLUc+o6j+a0
-=ilTr
+iQEcBAEBCAAGBQJRYj7yAAoJEEqz6FtPBkyjRooH/3i5uG9PDcqv+p56Z4chtisw
+3Q/iR30g2A5oIcD37njcv2iIzT840QEFjkVWkpX5MD0Lwq5tUhE04O2rrSnASu7g
+y0F+PURtN+kZQNEGr0YAo8jXYyKYmhKY93Zw0/Kyo7qzGBGRtKN/4ahK5k6g7EJw
+XgQb4yQ32V3oVsXa4iu+kqv0xwUE+vjPZFKG1EVPjXVzfi9bwnDb04k01vAbxWk8
+CXtv9r01z1UEYQbwGUJf1k/2gfcmeEGyYxgnwz4GZk2W3NT9JKwfJJ3FWzGHpwVs
+DoZqmaH78cvKcziim8yIwKC4ood+Xgs/t6ml33znrCloPi93dJDZUE5mCF25/Co=
+=Mz7S
 -----END PGP SIGNATURE-----
