@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/graphicsmagick
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.109 2013/01/21 05:18:13 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphicsmagick/ChangeLog,v 1.110 2013/04/08 03:52:13 radhermit Exp $
+
+*graphicsmagick-1.3.18 (08 Apr 2013)
+
+  08 Apr 2013; Tim Harder <radhermit@gentoo.org> +graphicsmagick-1.3.18.ebuild,
+  +files/graphicsmagick-1.3.18-freetype.patch:
+  Version bump.
 
   21 Jan 2013; Mike Frysinger <vapier@gentoo.org>
   +files/graphicsmagick-1.3.17-freetype.patch, graphicsmagick-1.3.17.ebuild:
