@@ -1,6 +1,9 @@
 # ChangeLog for app-backup/deja-dup
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/deja-dup/ChangeLog,v 1.31 2013/04/07 14:20:47 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/deja-dup/ChangeLog,v 1.32 2013/04/07 14:31:19 jlec Exp $
+
+  07 Apr 2013; Justin Lecher <jlec@gentoo.org> deja-dup-22.1.ebuild:
+  Add missing eclass phase functions calls
 
   07 Apr 2013; Justin Lecher <jlec@gentoo.org> deja-dup-22.1.ebuild,
   -deja-dup-24.0.ebuild, -deja-dup-25.1.1.ebuild, -deja-dup-25.3.ebuild,
